--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Amaranth|Great+Vibes|Lobster&display=swap" rel="stylesheet">
-    <script src="js/script.js"></script
+    <script src="js/script.js"></script>
 </head>
 <body>
+    <div class="container">
+        <div class="intro">
+          <br><br><br><br>
+          <img src="logo.png" alt="Delani's studio logo." class="Dlogo">
+          <h4>WELCOME<br>TO DELANI STUDIO</h4>
+          <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+          <br><br><br><br>
+          <img src="" alt="Image for mouse click." class="MouseClick">
+          <br>
+        </div>
+
     
 </body>
 </html>
