adding about us section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
           <img src="" alt="Image for mouse click." class="MouseClick">
           <br>
         </div>
+        <div class="aboutUs">
+            <br><br><br>
+            <h4 style="text-align: center;">ABOUT US</h4>
+            <p style="text-align: center;">When you work with us you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive<br> and agile.<br>
+              Our approach unifies design, development and product management to create exceptional products.<br> We start each project by understanding
+              your business needs, the user's needs and the product requirements<br> then we help translate them into effective and elegant solutions.
+              <br><br><br>
+          </div>
 
     
 </body>
