--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
               your business needs, the user's needs and the product requirements<br> then we help translate them into effective and elegant solutions.
               <br><br><br>
           </div>
+          <div class="services">
+            <br><br><br><br>
+            <h4 style="text-align: center;">SERVICES</h4>
+            <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand you product vision.<br>
+              The outcome of this scooping session is proposal or high-level statement of work.<br>
+              based on your requirements, we can provide a whole offering or just the pieces you need.
+              <br><br><br><br>
+        </div>
 
     
 </body>
