adding what we do heading

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
               based on your requirements, we can provide a whole offering or just the pieces you need.
               <br><br><br><br>
         </div>
+        <div class="whatWeDo">
+            <br>
+              <h4 style="text-align: center;">WHAT WE DO</h4>
 
     
 </body>
