--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
         <div class="whatWeDo">
             <br>
               <h4 style="text-align: center;">WHAT WE DO</h4>
+              <div class="row">
+                <div class="col-md-4" id="design">
+                  <div class="hide-design-image">
+                    <img src="design_icon.png" alt="Delani's design icon.">
+                  </div>
+                    <p>DESIGN</p>
+                    <p class="hide" id="design-showing">
+                        Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
+                        Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+                </div>
+        </div>
 
     
 </body>
