--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
                         Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.
                         Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
                 </div>
+                <div class="col-md-4" id="development">
+                    <div class="hide-development-image">
+                        <img src="dev_icon.png" alt="Delani's dev. icon.">
+                    </div>
+                      <p>DEVELOPMENT</p>
+                      <p class="hide" id="development-showing">
+                          All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                          They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                  </div>
         </div>
 
     
