--- a/index.html
+++ b/index.html
@@ -58,7 +58,17 @@
                       <p class="hide" id="development-showing">
                           All engineers are fluent in the latest enterprise, mobile and web development technologies.
                           They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                </div>
+                <div class="col-md-4" id="productManagement">
+                    <div class="hide-product-management">
+                        <img src="product_icon.png" alt="Delani's product.">
+                    </div>  
+                      <p>PRODUCT MANAGEMENT</p>
+                      <p class="hide" id="product-management-showing">
+                            Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
+                            This iterative process allows for changes as business requirements evolve.</p>
                   </div>
+
         </div>
 
     
