--- a/index.html
+++ b/index.html
@@ -68,8 +68,62 @@
                             Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. 
                             This iterative process allows for changes as business requirements evolve.</p>
                   </div>
-
         </div>
+        <div class="Portfolio">
+            <h4 style="text-align: center;">PORTFOLIO</h4>
+            <div class="row">
+              <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work1">
+                  <img src="work1.jpg" alt="Weather information image" width="100%">
+                <div class="Hover">
+                 <p id=Hover_designKenya></p>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work2">
+                  <img src="work2.jpg" alt="Design Kenya image" width="100%">
+                <div class="Hover">
+                  <p id=Hover_designKenya></p>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work3">
+                  <img src="work3.jpg" alt="Ontario Security image" width="100%">
+                <div class="Hover">
+                  <p id=Hover_designKenya></p>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images " id="work4">
+                  <img src="work4.jpg" alt="Design image" width="100%">
+                <div class="Hover">
+                  <p id=Hover_designKenya></p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work5">
+                  <img src="work5.jpg" alt="Let's chat image" width="100%"> 
+                <div class="Hover">
+                    <p id=Hover_designKenya></p>
+                </div> 
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work6">
+                  <img src="work6.jpg" alt="Mobile App buttons image" width="100%">
+                <div class="Hover">
+                  <p id=Hover_designKenya></p>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work7">
+                  <img src="work7.jpg" alt="Mock-up Kenya_burned logo" width="100%">
+                <div class="Hover">
+                  <p id=Hover_designKenya></p>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work8">
+                  <img src="work8.jpg" alt="Giraffe restaurant" width="100%">
+                <div class="Hover">
+                  <p id=Hover_designKenya></p>
+                </div>
+              </div>
+            </div>
+          </div>
 
     
 </body>
