--- a/index.html
+++ b/index.html
@@ -124,6 +124,33 @@
               </div>
             </div>
           </div>
+          <div class="Contact-Us">
+            <h4 style="text-align: center; color:white">CONTACT US</h4>
+               <form>
+                <div class="row" id="contact-info-input">
+                    <div class="col-6">
+                      <div class="form-group">
+                        <label for="name"></label>
+                        <input type="text" name="FNAME" class="required form-control" id="mce-FNAME name" placeholder="Name...">
+      
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="form-group">
+                        <label for="email"></label>
+                        <input type="text" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL email" placeholder="Email">
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="form-group">
+                      <label for="message"></label>
+                      <textarea type="text" name="MESSAGE" class="required form-control" id="mce-MESSAGE comment" cols="30" rows="10" placeholder="Your message here..."></textarea>
+                    </div>
+                  </div>
+                </div>
+                <div class="submit"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+               </form>
+            </div>
 
     
 </body>
