addig footer and social icons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h4>WELCOME<br>TO DELANI STUDIO</h4>
           <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
           <br><br><br><br>
-          <img src="" alt="Image for mouse click." class="MouseClick">
+          <img src="mouse_click.png" alt="Image for mouse click." class="MouseClick">
           <br>
         </div>
         <div class="aboutUs">
@@ -151,7 +151,29 @@
                 <div class="submit"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                </form>
             </div>
-
-    
+            <div class="Footer" id="socialMediaIcons">
+                <br><br>
+                <!--Twitter-->
+                <img src="twitter.png" alt="Twitter icon"><i class="fab fa-lg fa-twitter"></i></a>
+                <!--Dribbble-->
+                <img src="dribble.png" alt="Dribble icon"><i class="fab fa-lg fa-dribbble"></i></a>
+                 <!--Facebook-->
+                <img src="facebook.png" alt="Facebook icon"><i class="fab fa-lg fa-facebook-f"></i></a>
+                <!--Google -->
+                <img src="g_plus.png" alt="Google_plus icon"><i class="fab fa-lg fa-google-plus-g"></i></a>
+                <!--Skype-->
+                <img src="skype.png" alt="Skype icon"><i class="fab fa-lg fa-skype"></i></a>
+                <!--Stumble Upom-->
+                <img src="stumble_upon.png" alt="Stumble-upon icon"><i class="fab fa-lg fa-stumble-upon"></i></a>
+                <!--Behance-->
+                <img src="behance.png" alt="Behance icon"><i class="fab fa-lg fa-behance"></i></a>
+                <!--Pinterest-->
+                <img src="pinterest.png" alt="Pinterest icon"><i class="fab fa-lg fa-pinterest"></i></a>
+                <!--Flickr-->
+                <img src="flickr.png" alt="Flickr icon"><i class="fab fa-lg fa-flickr"></i></a>
+                <p>DELANI STUDIO<br>2021</p>
+              </div>
+            </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>    
 </body>
 </html>
